--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,37 @@
+button {
+    margin-top: 30px;
+    background-color: green;
+    font-size: large;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 5px;
+    border: solid 1px black
+    
+
+}
+button:hover {
+  opacity: 0.85;
+  cursor: pointer;
+  box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.6);
+  transition: 0.3s;
+  
+  
+  
+  
+}
+button:active {
+  background-color: rgb(68, 205, 68);
+
+}
+
 label {
   margin: 10px 0px;
   font-weight: 600;
 }
 input {
-  border-radius: 3px;
+  border-radius: 5px;
   border-color: rgb(192, 192, 192);
+  
+  
 }
 /* Ovo ispod su 2 utility classe flexa od kojih prva za centriranje containera */
 .fx-j-a-c {
@@ -19,7 +46,6 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: #fcd530;
-
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .card {
@@ -28,6 +54,7 @@ body {
   flex-direction: column;
   background-color: #ffff;
   border-radius: 5px;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.75);
 }
 .header {
   background-color: red;
